[tool.mypy]
check_untyped_defs = "true"
disallow_any_generics = "true"
disallow_incomplete_defs = "true"
disallow_untyped_defs = "true"
no_implicit_optional = "true"
ignore_missing_imports = "true"

[tool.poetry]
name = "firewatch"
version = "2.0.0"
description = "A tool to monitor results in OpenShift CI and report pod or test failures to Jira."
authors = ["CSPI QE <cspi-qe@redhat.com>"]
readme = "README.md"
license = "Apche-2.0"
homepage = "https://github.com/CSPI-QE/firewatch"
repository = "https://github.com/CSPI-QE/firewatch"
packages = [{include = "src"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
Download = "https://github.com/CSPI-QE/firewatch"
"Bug Tracker" = "https://github.com/CSPI-QE/firewatch/issues"

[tool.poetry.scripts]
firewatch = "src.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
google-cloud-storage = "^2.10.0"
jinja2 = "^3.1.4"
jira = "^3.5.2"
junitparser = "^3.1.0"
python-simple-logger = "^1.0.6"
ipdb = "*"
pyhelper-utils = "^0.0.17"

[tool.poetry.group.dev.dependencies]
tox = "^4.11.4"
pre-commit = "*"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ipython = "*"

[tool.poetry.group.tests.dependencies]
google-cloud-storage = "^2.10.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]
