[metadata]
name = firewatch
version = 1.0.0
description = A tool to monitor pods in OpenShift CI and report pod failures to Jira
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CSPI-QE/firewatch
author = Red Hat Cloud Services and Platform Integration Quality Engineering
author_email = cspi-qe@redhat.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    click
    google-cloud-storage
    jinja2
    jira
    junitparser
python_requires = >=3.9
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
    tests*
    testing*

[options.entry_points]
console_scripts =
    firewatch = cli:cli

[options.package_data]
* = schemas/*.json, schemas/*.xsd, py.typed, classifiers/*.yml

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
